syntax = "proto3";

package auth;
option go_package = "github.com/Sene4ka/cloud_storage/internal/api";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string access_token = 4;
  int64 access_expires_in = 5;
  string refresh_token = 6;
  int64 refresh_expires_in = 7;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string user_id = 1;
  string email = 2;
  string name = 3;
  string access_token = 4;
  int64 access_expires_in = 5;
  string refresh_token = 6;
  int64 refresh_expires_in = 7;
}

message RefreshRequest {
  string refresh_token = 1;
}

message RefreshResponse {
  string access_token = 1;
  int64 access_expires_in = 2;
  string refresh_token = 3;
  int64 refresh_expires_in = 4;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string email = 3;
  int64 expires_in = 4;
}

message LogoutRequest {
  string refresh_token = 1;
}

message LogoutResponse {
  bool success = 1;
}