syntax = "proto3";

package file;
option go_package = "github.com/Sene4ka/cloud_storage/internal/api";

import "google/protobuf/timestamp.proto";

service FileService {
  rpc InitiateUpload(InitiateUploadRequest) returns (InitiateUploadResponse);
  rpc CompleteUpload(CompleteUploadRequest) returns (CompleteUploadResponse);
  rpc GetDownloadLink(GetDownloadLinkRequest) returns (GetDownloadLinkResponse);
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  rpc GetFileInfo(GetFileInfoRequest) returns (GetFileInfoResponse);
}

message InitiateUploadRequest {
  string user_id = 1;
  string filename = 2;
  int64 size = 3;
  string mime_type = 4;
  bool is_public = 5;
  map<string, string> tags = 6;
}

message InitiateUploadResponse {
  string file_id = 1;
  string upload_url = 2;
  string upload_method = 3;
  map<string, string> headers = 4;
  int64 expires_in = 5;
  bool success = 6;
}

message CompleteUploadRequest {
  string file_id = 1;
  string user_id = 2;
  string etag = 3;
}

message CompleteUploadResponse {
  bool success = 1;
  string storage_path = 2;
  google.protobuf.Timestamp created_at = 3;
}

message GetDownloadLinkRequest {
  string file_id = 1;
  string user_id = 2;
  int64 expires_in = 3;
}

message GetDownloadLinkResponse {
  string download_url = 1;
  string method = 2;
  map<string, string> headers = 3;
  int64 expires_in = 4;
}

message DeleteFileRequest {
  string file_id = 1;
  string user_id = 2;
}

message DeleteFileResponse {
  bool success = 1;
}

message GetFileInfoRequest {
  string file_id = 1;
  string user_id = 2;
}

message GetFileInfoResponse {
  string id = 1;
  string user_id = 2;
  string filename = 3;
  string original_name = 4;
  int64 size = 5;
  string mime_type = 6;
  string storage_path = 7;
  string bucket = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
  bool is_public = 11;
  map<string, string> tags = 12;
}